--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.3",
+    "nanoid": "^3.3.4",
     "qrcode": "^1.5.3",
     "speakeasy": "^2.0.0"
   }
